# nrt-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/nrt-backend-candle/: Cargo.toml
crates/nrt-backend-candle/examples/: hello_candle.rs  hello_candle_metal.rs
crates/nrt-backend-candle/src/: lib.rs  model_map.rs  profile.rs  session.rs
crates/nrt-backend-stub/: Cargo.toml
crates/nrt-backend-stub/src/: lib.rs
crates/nrt-bench/: Cargo.toml
crates/nrt-bench/src/: main.rs
crates/nrt-cluster/: Cargo.toml
crates/nrt-cluster/src/: dispatch.rs  lib.rs  manager.rs  metrics.rs  scheduler.rs
crates/nrt-cluster/tests/: orchestration.rs
crates/nrt-core/: Cargo.toml
crates/nrt-core/src/: backend.rs  error.rs  ids.rs  kv_cache.rs  lib.rs  session.rs  tier.rs
crates/nrt-manifest/: Cargo.toml
crates/nrt-manifest/src/: dispatch.rs  lib.rs  model.rs  sizes.rs  validate.rs
crates/nrt-manifest/tests/: parse.rs
crates/nrt-manifest/tests/fixtures/: customer-support.yaml
crates/nrt-server/: Cargo.toml
crates/nrt-server/src/: main.rs
crates/nrt-server/ui/: dashboard.html
docs/: Modelfile.tinyllama  architecture.md  bench_ollama_vs_nrt.sh  bench_results.txt
manifests/: customer-support.yaml  density-50.yaml  warming-heavy.yaml
