[package]
name = "nrt-cluster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cluster Manager: Manifest-driven scheduler, co-activation warming, LRU KV eviction"

[dependencies]
nrt-core.workspace = true
nrt-manifest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
nrt-backend-stub.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "test-util"] }
tracing-subscriber.workspace = true
